# Explingo

./: .gitignore  README.md  basic_llm_setup.ipynb  fixed_feature_descriptions.json  llama_prompt.ipynb  llms.ipynb  llms.py  no-tuning-responses-2.txt  no-tuning-responses.txt  parrot  pyproject.toml  tasks.py
RAG/: original_feature_descriptions.json  prepare-housing-guide.ipynb
data/: ames_housing_0.csv  ames_housing_1.csv  ames_housing_3.csv  ames_housing_4.csv  ames_housing_9.csv  cell_phone_churn_0.csv  cell_phone_churn_1.csv  cell_phone_churn_2.csv  mushroom_2.csv  pdf_benign_0.csv  pdf_benign_1.csv  pdf_benign_2.csv  pdf_malware_0.csv  pdf_malware_1.csv  pdf_malware_2.csv  student_performance_0.csv  student_performance_2.csv
emissions-dataset/: co2Emission_prediction.ipynb  co2_emissions_explanations.ipynb
evaluation/: evaluate_results.ipynb  experiment_runner.py  explingo.py
explingo/: __init__.py  grader.py  narrator.py  testing.py  tutorial.ipynb
finetuning/: examples.json  extract_examples.ipynb  finetuning_data.json  finetuning_data_2.json  generate_dataset_shell.py  parse_dataset_inputs.ipynb  tables_for_dataset_generation_study.csv
full-experiment/: accuracy_tests.json  cleaned_results.csv  cleaned_results_overall.csv  completeness_tests.json  core.py  evaluate_results.ipynb  examples.py  experiment.ipynb  experiment_runner.py  explingo.py  finetuning_ds.json  fluency_results.json  metrics.py  metrics2.py  narratives_checkpoint.json  partial_results.csv  partial_results_2.csv  prompt_design_results.csv  results.csv  results_by_technique.csv  (+8 more)
(+69 files in other folders)
