[tool.poetry]
name = "explingo"
version = "0.1.0.1"
description = ""
authors = ["Ola Zytek <zyteka@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dspy = "^0.1.5"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
