[tool.poetry]
name = "explingo"
version = "0.1.0.1"
description = ""
authors = ["Ola Zytek <zyteka@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dspy-ai = "2.4.13"
pytest = "^8.3.3"
notebook = "^7.2.2"
jupyter = "^1.1.1"
invoke = "^2.2.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
